Bug 350849 - Konsole hides tab bar when moving tabs
Summary: Konsole hides tab bar when moving tabs
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: tabbar (other bugs)
Version First Reported In: 15.04.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-01 05:45 UTC by Kyrylo Bohdanenko
Modified: 2016-06-11 15:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kyrylo Bohdanenko 2015-08-01 05:45:09 UTC
Hi,

The tab bar dissapears when using 'Show Tab Bar When Needed' mode and the user tries to move a tab when there is only 2 tabs in one window.

Reproducible: Always

Steps to Reproduce:
1. Open Konsole
2. Press Ctrl+Shift+T (open new tab)
3. Press Ctrl+Shift+Arrow Left (or Right) (move tab left/right)

Actual Results:  
Tab bar is hidden, 2 tabs still alive (can switch between them using hotkeys)

Expected Results:  
Tab bar should be visible, tabs should stay alive

My Konsole setup is as follows:
* Tab bar visibility: Show Tab Bar When Needed
* Show 'New Tab' and 'Close Tab' buttons: No
* Use user-defined stylesheet: No
* New tab behaviour: Put New Tab At The End
Comment 1 Iris Morelle 2016-06-11 07:46:54 UTC
Posted a patch that fixes this issue for me: https://git.reviewboard.kde.org/r/128151/
Comment 2 Kurt Hindenburg 2016-06-11 15:39:08 UTC
Git commit 8e616c94d93e97aaaf45a5ac328e9c833a8782d8 by Kurt Hindenburg.
Committed on 11/06/2016 at 15:35.
Pushed by hindenburg into branch 'master'.

Fix tab bar disappearing when moving tabs on certain configurations

This fixes an issue with the tab bar disappearing when moving tabs left
or right with only two tabs open if the tab bar visibility is set to
Show Tab Bar When Needed in preferences

Thanks to Ignacio R. Morelle shadowm2006 gmail com

REVIEW: 128151

M  +3    -0    src/ViewContainer.cpp

http://commits.kde.org/konsole/8e616c94d93e97aaaf45a5ac328e9c833a8782d8