Fix tab bar disappearing when moving tabs on certain configurations

This fixes an issue with the tab bar disappearing when moving tabs left
or right with only two tabs open if the tab bar visibility is set to
Show Tab Bar When Needed in preferences

Thanks to Ignacio R. Morelle shadowm2006 gmail com

REVIEW: 128151
BUG: 350849